[fix] registration page can be scrolled on small screens

--- a/src/main/frontend/app/css/variables.scss
+++ b/src/main/frontend/app/css/variables.scss
@@ -32,14 +32,6 @@ $warning: #F2C037;
   color: white; //for text color!
 }
 
-@mixin card-height-static {
-  height: 425px;
-}
-
-@mixin inner-card-height-static {
-  height: 330px;
-}
-
 @mixin card-title-style {
   font-size: 2em;
   font-weight: bold;
